[package]
name = "aether"
version = "0.1.0"
edition = "2021"

[dependencies]
# O motor assíncrono para aguentar milhares de pings de rede ao mesmo tempo
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }

# A nossa stack gRPC ultra rápida
tonic = "0.11"
prost = "0.12" # Engine do Protocol Buffers usada pelo tonic

# Para ler métricas do sistema (CPU/RAM/Temperatura) sem sofrer
sysinfo = "0.30"

# Linha de comando elegante para passar as flags --mode master/worker
clap = { version = "4.4", features = ["derive"] }

[build-dependencies]
# Compilador de arquivos .proto para gerar código Rust em tempo de build
tonic-build = "0.11"
